--- a/vignettes/IntLimVignette.Rmd
+++ b/vignettes/IntLimVignette.Rmd
@@ -59,6 +59,11 @@ myres <- IntLim::RunIntLim(inputData,stype="DIAG")
 IntLim::DistPvalues(myres)
 ```
 
+Process the results and filter pairs of genes-metabolites based on adjusted p-values and differences in correlation coefficients between groups 1 and 2.  Then plot heatmap of significant gene-metabolite pairs
+```{r}
+myres <- IntLim::ProcessResults(myres,inputData)
+IntLim::CorrHeatmap(myres)
+```
 
 ```{r}
 sessionInfo()
