--- a/vignettes/IntLimVignette.Rmd
+++ b/vignettes/IntLimVignette.Rmd
@@ -32,7 +32,7 @@ To start up the app, simply type:
 A small data set is embedded in a package.  To access it:
 ```{r}
      dir <- system.file("extdata", package="IntLim", mustWork=TRUE)
-     csvfile <- file.path(dir, "test.csv")
+     csvfile <- file.path(dir, "NCIinput.csv")
      csvfile
 ```
 
