--- a/vignettes/IntLimVignette.Rmd
+++ b/vignettes/IntLimVignette.Rmd
@@ -66,8 +66,8 @@ IntLim::DistPvalues(myres)
 
 Process the results and filter pairs of genes-metabolites based on adjusted p-values and differences in correlation coefficients between groups 1 and 2.  Then plot heatmap of significant gene-metabolite pairs
 ```{r}
-myres <- IntLim::ProcessResults(myres,inputData)
-IntLim::CorrHeatmap(myres)
+myres2 <- IntLim::ProcessResults(myres,inputData)
+IntLim::CorrHeatmap(myres2)
 ```
 
 Plot a pair of interest:
@@ -82,7 +82,7 @@ IntLim::OutputData(inputData=inputDatafilt,filename="~/FilteredData.zip")
 
 Users can also write the results file:
 ```
-OutputResults(inputResults=myres,filename="~/MyResults.zip")
+OutputResults(inputResults=myres2,filename="~/MyResults.zip")
 ```
 
 
