--- a/inst/doc/IntLimVignette.Rmd
+++ b/inst/doc/IntLimVignette.Rmd
@@ -66,8 +66,8 @@ IntLim::DistPvalues(myres)
 
 Process the results and filter pairs of genes-metabolites based on adjusted p-values and differences in correlation coefficients between groups 1 and 2.  Then plot heatmap of significant gene-metabolite pairs
 ```{r}
-myres2 <- IntLim::ProcessResults(myres,inputData)
-IntLim::CorrHeatmap(myres2)
+myres <- IntLim::ProcessResults(myres,inputData)
+IntLim::CorrHeatmap(myres)
 ```
 
 Plot a pair of interest:
